# PR-Review-Negotiation-Environment

./: .gitignore  Dockerfile  LEARNINGS.md  README.md  app.py  gateway.py  inference.py  models.py  nginx.conf  openenv.yaml  pr_review_dashboard.html  pr_review_readme (1).md  pyproject.toml  requirements.txt  start.sh  start_local.ps1
pr_review_dashboard/: README.md  next.config.mjs  package-lock.json  package.json
pr_review_dashboard/app/: Dashboard.js  globals.css  layout.js  page.js
pr_review_dashboard/app/api/agent/: route.js
pr_review_dashboard/app/api/diff/: route.js
pr_review_dashboard/app/code/: page.js
pr_review_dashboard/components/: DiffView.js  LogBox.js  ManualOverride.js  MetricCards.js  Sidebar.js  TabBar.js  Timeline.js  TopBar.js
pr_review_dashboard/lib/: api.js  backend.js  dashboard-config.js
server/: action_normalizer.py  app.py  environment.py  graders.py
server/tasks/: custom.py  escalation.py  iterative.py  single_pass.py
